Fix overflow

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -15,3 +15,7 @@
     }
   }
 }
+
+.App-header {
+  overflow-x: hidden;
+}
